--- a/public/login.html
+++ b/public/login.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,10 +12,15 @@
 <body>
     <div class="main">
         <p class="sign" align="center">Sign in</p>
-        <form class="form1" method="POST">
-            <input class="un" type="text" align="center" placeholder="Username" required>
-            <input class="pass" type="password" align="center" placeholder="Password" required>
-            <a class="submit" align="center">Sign in</a>
+        <form action="log" class="form1" method="POST">
+            <!-- 
+            <input class="un" name="username" type="text" align="center" placeholder="Username" required>
+            <input class="pass" name="password" type="password" align="center" placeholder="Password" required>
+            <a class="submit" align="center">Sign in</a> 
+            -->
+            <input type="text" name="username" class="un" placeholder="Username" required>
+			<input type="password" name="password" class="pass" placeholder="Password" required>
+			<input type="submit" class="submit">
     </div>
 </body>
 
