--- a/public/login.html
+++ b/public/login.html
@@ -18,8 +18,8 @@
             <input class="pass" name="password" type="password" align="center" placeholder="Password" required>
             <a class="submit" align="center">Sign in</a> 
             -->
-            <input type="text" name="username" class="un" placeholder="Username" required>
-			<input type="password" name="password" class="pass" placeholder="Password" required>
+            <input type="text" name="username" class="un" placeholder="Username" >
+			<input type="password" name="password" class="pass" placeholder="Password">
 			<input type="submit" class="submit">
     </div>
 </body>
